--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -23,7 +23,7 @@ body {
 
 main {
     display: flex;
-    height: calc(100% - 80px);
+    height: 100%;
 }
 
 /**************************************
