--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -43,10 +43,16 @@
 /*    !*padding: 30px 40px;*!*/
 /*    flex: 1;*/
 /*}*/
-main .container {
+main {
+    flex: 1 !important;
+    width: 100% !important;
+    height: auto;
+}
+.container {
     flex: 1 !important;
     width: 100% !important;
     padding: 20px; !important;
+    height: 100%; !important;
 }
 
 .container h2 {
