FE 근태 패턴 - 패턴 삭제(관련)

--- a/src/main/resources/templates/pattern/main.html
+++ b/src/main/resources/templates/pattern/main.html
@@ -112,7 +112,7 @@
     <input type="hidden" name="description" id="patternDescInput">
 </form>
 <form id="deletePatternForm" method="post" th:action="@{/pattern/delete}">
-    <input type="hidden" name="deletePattern" id="deletePatternInput">
+    <input type="hidden" name="patternCode" id="deletePatternInput">
 </form>
 <script th:src="@{/js/script.js}"></script>
 <script th:src="@{/js/pattern.js}"></script>
